# ACP-BeeAI_demo

./: .gitignore  ACP+BeeAI.md  README.md  style.json
demo-agent/: README.md  openai-provider-local.yaml  openai-provider.yaml  pyproject.toml  sandi-demo.md
demo-agent/src/openai_agent/: acp_base.py  agent.py  server.py
